--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,17 @@
 *{
     background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
 h1{
     color:pink;          
 }
 #index img {
-    width:60%;
+    width:43%;
     height:450px;
+    float:left;
+}
+aside {
+    float:right;
+    font-size:14px;
 }
