--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,26 @@ h1{
     color:pink;          
 }
 #index img {
-    width:43%;
+    width:40%;
     height:450px;
     float:left;
 }
 aside {
     float:right;
     font-size:14px;
+}
+aside h2 {
+    padding-left: 30px;
+}
+nav>ul>li>a{
+    text-decoration: none;  
+    color:white;
+}
+nav>ul>li{
+    display:inline-block;
+    text-align: right;
+}
+nav{
+    background-color:red;
+   
 }
