--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ h1{
     color:pink;          
 }
 #index img {
-    width:40%;
+    width:70%;
     height:450px;
     float:left;
 }
@@ -29,4 +29,7 @@ nav>ul>li{
 nav{
     background-color:red;
    
+}
+#me {
+    font-size: 20px;
 }
