--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ h1{
     color:pink;          
 }
 #index img {
-    width:70%;
+    width:60%;
     height:450px;
     float:left;
 }
@@ -32,4 +32,6 @@ nav{
 }
 #me {
     font-size: 20px;
+    padding-right: 100px;
+    line-height: 40px;
 }
