--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ nav>ul>li>a{
     text-decoration: none;  
     color:white;
 }
-nav>ul>li{
+nav{
     display:inline-block;
     text-align: right;
 }
@@ -34,4 +34,11 @@ nav{
     font-size: 20px;
     padding-right: 100px;
     line-height: 40px;
+}
+#projects{
+    background-image: url(./../images/winepress.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height:200px;
+
 }
