add paragraph to about.html and style it and make all changes to the unordered lists

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,3 +65,12 @@ nav ul li{
     font-size:14px;
     margin-top:20px;
 }
+#education{
+    float:left;
+}
+#job {
+    float:right;
+}
+#hobbies{
+    margin-top:500px;
+}
