--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ nav ul li{
 
 #me {
     font-size: 20px;
-    /* padding-right: 100px; */
+    padding-right: 100px;
     line-height: 40px;
 }
 #project{
@@ -67,10 +67,21 @@ nav ul li{
 }
 #education{
     float:left;
+    line-height: 30px;
 }
 #job {
     float:right;
+    padding-left:100px;
+    line-height: 30px;
+}
+#tech{
+    margin-top: 250px;
 }
 #hobbies{
-    margin-top:500px;
+    margin-top:50px;
+    line-height: 30px;
+}
+#education h3 {
+    padding-left: 20px;
+    line-height: 30px;
 }
